kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: titan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres  
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        hostPath:
          path: /srv/k8s/titan-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: titan
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
