kubernetes/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: titan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: oxisto/titan
        imagePullPolicy: Always
        name: server
        volumeMounts:
        - name: config
          mountPath: /usr/titan/config.yaml
          readOnly: true
        ports:
        - containerPort: 4300
          protocol: TCP
      imagePullSecrets:
      - name: registry-secret
      volumes:
      - name: config
        secret:
          secretName: config-secret
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: titan
spec:
  ports:
  - port: 4300
    protocol: TCP
    targetPort: 4300
  selector:
    app: server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-api
  namespace: titan
spec:
  rules:
  - host: eve.aybaze.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 4300
        path: /api
  tls:
  - hosts:
    - eve.aybaze.com
    secretName: eve-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-auth
  namespace: titan
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: eve.aybaze.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 4300
        path: /auth
  tls:
  - hosts:
    - eve.aybaze.com
    secretName: eve-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-slack
  namespace: titan
spec:
  rules:
  - host: eve.aybaze.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 4300
        path: /slack
  tls:
  - hosts:
    - eve.aybaze.com
    secretName: eve-tls
