kubernetes/titan.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: titan
  name: titan
  namespace: titan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titan
  template:
    metadata:
      labels:
        app: titan
    spec:
      containers:
      - image: oxisto/titan
        imagePullPolicy: Always
        name: titan
        volumeMounts:
        - name: config
          mountPath: /usr/titan/config
          readOnly: true
        ports:
        - containerPort: 4300
          protocol: TCP
      volumes:
      - name: config
        secret:
          secretName: config-secret
          items:
          - key: config-production.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: titan
  namespace: titan
spec:
  ports:
  - port: 4300
    protocol: TCP
    targetPort: 4300
  selector:
    app: titan
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-prod"
  name: titan
  namespace: titan
spec:
  rules:
  - host: eve.aybaze.com
    http:
      paths:
      - backend:
          serviceName: titan
          servicePort: 4300
        path: /
  tls:
  - hosts:
    - eve.aybaze.com
    secretName: eve-tls
